# mediconnect

./: pyproject.toml
app/: __init__.py  constants.py  crud.py  schemas.py  util.py
app/models/: __init__.py
app/static/: l.txt
app/static/login/css/: appointment_patient.css  login_patient.css
app/static/patient-app/: patient_bottombar.css  patient_dashboard.css  patient_previous_appointments.css  patient_register.css  patient_view_appointment.css  patient_view_prescription.css
app/templates/: appointment_patient.html  doctor_appointment.html  doctor_dashboard.html  doctor_details.html  doctor_patient.html  doctor_per_detail.html  downbar_patient.html  hospital_options.html  hospital_options_doctors.html  hospital_options_sp.html  layout.html  login.html  login_patient.html  patient_appointment.html  patient_dashboard.html  patient_login.html  patient_previous_appointments.html  patient_register.html  patient_remainder.html  patient_view_appointment.html  patient_view_prescription.html  register_patient.html  sidebar.html
app/templates/bottombar/: patient_bottombar.css  patient_bottombar.html
app/views/: __init__.py  auth.py  doctor.py  patient.py
